Mudanda a cor do label para black

--- a/curso-jsp/src/main/webapp/assets/css/style.css
+++ b/curso-jsp/src/main/webapp/assets/css/style.css
@@ -10484,13 +10484,13 @@ body.menu-bottom #collapse-menu {
 .form-material .form-default .form-control:focus ~ .form-bar:after, .form-material .form-default .form-control:focus ~ .form-bar:before {
   background: #d6d6d6; }
 .form-material .form-default.form-static-label .float-label {
-  color: #d6d6d6; }
+  color: #000000; }
 .form-material .form-default.form-static-label .form-control {
   border-bottom-color: #d6d6d6; }
 .form-material .material-group-default .material-addone i, .form-material .material-group-default .material-addone span {
   color: #d6d6d6; }
 .form-material .form-danger .form-control:focus ~ label {
-  color: #ff5252; }
+  color: #ff000000; }
 .form-material .form-danger .form-control:focus ~ .form-bar:after, .form-material .form-danger .form-control:focus ~ .form-bar:before {
   background: #ff5252; }
 .form-material .form-danger.form-static-label .float-label {
